.metadata/.plugins/org.eclipse.cdt.ui/fileSystem.build.log
21:16:46 **** Incremental Build of configuration Debug for project fileSystem ****
make all 
Building file: ../filesystem.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"filesystem.d" -MT"filesystem.d" -o "filesystem.o" "../filesystem.c"
../filesystem.c:20:6: error: duplicate member ‘estado’
  int estado;
      ^
../filesystem.c:21:6: error: duplicate member ‘tamanio’
  int tamanio;
      ^
make: *** [filesystem.o] Error 1

21:16:46 Build Finished (took 452ms)

